test/deprecated/deprecated-sort-calls.good
deprecated-sort-calls.chpl:6: error: bubbleSort has moved to SortExtras
