test/deprecated/deprecated-sort-calls.chpl
use Sort;

var A=[1,2];

// These top-level Sort methods can be removed after 1.20
bubbleSort(A);
heapSort(A);
insertionSort(A);
binaryInsertionSort(A);
mergeSort(A);
quickSort(A);
selectionSort(A);
